[package]
name = "conventional_roll_play"
version = "0.1.0-alpha.2"
edition = "2021"
description = "conventional roll play text lexer and parser."
license = "MIT"
repository = "https://github.com/HsiangNianian/contentional_roll_play"
authors = ["HsiangNianian <i@jyunko.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "conventional_roll_play"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"